--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "framer-motion": "^10.16.4",
     "next": "13.5.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
