--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.5.2"
+    "react-intersection-observer": "^9.5.2",
+    "swiper": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
