--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
     "swiper": "^10.0.0"
   },
@@ -21,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.1",
     "autoprefixer": "^10",
     "daisyui": "^3.8.3",
     "eslint": "^8",
