--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
+    "react-youtube": "^10.1.0",
     "swiper": "^10.0.0"
   },
   "devDependencies": {
